--- a/.gitignore
+++ b/.gitignore
@@ -421,6 +421,10 @@ FodyWeavers.xsd
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+*.vcxproj.filters
+*.vcxproj
+
+
 
 # Local History for Visual Studio Code
 .history/
