--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+*.filters
+*.vcxproj
+
 # Mono auto generated files
 mono_crash.*
 
